Fix x-overflow bug
Ant has a bug where the row with gutter specified may overflow its container due to negative margins

--- a/src/components/layouts/signup-layout/style.less
+++ b/src/components/layouts/signup-layout/style.less
@@ -2,3 +2,10 @@
 @import '../../../styles/mixins.less';
 @import '../../../styles/fonts.less';
 
+.SignupLayout {
+  /* Fix bug where ant row overflows container */
+  .ant-row-flex {
+    margin-right: 0 !important;
+    margin-left: 0 !important;
+  }
+}
